// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchContainer page component it renders correctly when films are provided 1`] = `
<React.Fragment>
  <Header>
    <div
      className="padding-controls"
    >
      <SiteName />
      <SearchForm
        onSearchChange={[Function]}
        search=""
        searchBy="title"
      />
    </div>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <SearchResults
        displayCount={15}
        films={
          Array [
            Object {
              "genres": Array [
                "some genre",
                "another genre",
              ],
              "id": 1,
              "overview": "Film overview",
              "poster_path": "http://via.placeholder.com/500x750",
              "release_date": "2018-05-04",
              "title": "Film title",
            },
          ]
        }
        foundCount={1}
        onSortByChange={[Function]}
        sortBy="release_date"
      />
    </LoadingBlock>
  </main>
  <Footer />
</React.Fragment>
`;

exports[`SearchContainer page component it renders correctly when no films found 1`] = `
<React.Fragment>
  <Header>
    <div
      className="padding-controls"
    >
      <SiteName />
      <SearchForm
        onSearchChange={[Function]}
        search=""
        searchBy="title"
      />
    </div>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <ContentMessage
        className="font-size-header font-bold color-alt"
      >
        No movies found
      </ContentMessage>
    </LoadingBlock>
  </main>
  <Footer />
</React.Fragment>
`;
